[tool.poetry]
name = "dify-plugin-redis"
version = "0.1.0"
description = ""
authors = ["fcncdn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dify-plugin = "^0.3.1"
redis = "3.0.0"
redis-py-cluster = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
